Homework 3 - Decision Tree Learning

--- a/homework/homework_3/code/ID3.ipynb
+++ b/homework/homework_3/code/ID3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,27 +205,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Tree at 0x7fb7f6d9e220>"
-      ]
-     },
-     "execution_count": 334,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "build_tree(train_data)"
+    "import copy\n",
+    "import random\n",
+    "from helper import read_data\n",
+    "\n",
+    "def test_tree_accuracy(data):\n",
+    "    random.seed(1)\n",
+    "    print('=' * 58)\n",
+    "    trainlen = len(data['train'])\n",
+    "\n",
+    "    train_data = data['train']\n",
+    "    random.shuffle(train_data)\n",
+    "\n",
+    "    tree = build_tree(train_data[:int(trainlen * 0.8)])\n",
+    "    print(\n",
+    "        'Validate accuracy on tree without pruning ========>',\n",
+    "        test_data(tree, train_data[int(trainlen * 0.8):]))\n",
+    "    Ptree = prune_tree(\n",
+    "        copy.deepcopy(tree), train_data[int(trainlen * 0.8):])\n",
+    "    print(\n",
+    "        'Validate accuracy on tree with pruning ===========>',\n",
+    "        test_data(Ptree, train_data[int(trainlen * 0.8):]))\n",
+    "    print(\n",
+    "        'Test accuracy on tree without pruning ============>',\n",
+    "        test_data(tree, data['test']))\n",
+    "    print(\n",
+    "        'Test accuracy on tree with pruning ===============>',\n",
+    "        test_data(Ptree, data['test']))\n",
+    "    print('Tree size without pruning ========================> %6d' % (\n",
+    "        tree.size))\n",
+    "    print('Tree size with pruning ===========================> %6d' % (\n",
+    "        Ptree.size))\n",
+    "    print('Tree depth without pruning =======================> %6d' % (\n",
+    "        tree.depth))\n",
+    "    print('Tree depth with pruning ==========================> %6d' % (\n",
+    "        Ptree.depth))\n",
+    "    print('=' * 58)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,95 +403,36 @@
     "\n",
     "\n",
     "def prune_tree(tree, data):\n",
-    "    \"\"\"Find the best feature to split data.\n",
     "\n",
-    "    Args:\n",
-    "        tree: a decision tree to prune\n",
-    "        data: A list of data points [(x_0, y_0), ..., (x_n, y_n)]\n",
-    "\n",
-    "    Returns:\n",
-    "        a pruned tree\n",
-    "    \"\"\"\n",
-    "    # If the tree is a leaf, return it directly\n",
-    "    if type(tree) == int:\n",
+    "    # Check if the current tree node is a leaf node\n",
+    "    if isinstance(tree, int):\n",
     "        return tree\n",
-    "\n",
-    "    # Test current accuracy before pruning\n",
-    "    original_accuracy = test_data(tree, data)\n",
+    "    \n",
+    "    # Determine what to do if there's no data reaching the current node\n",
+    "    if not data:\n",
+    "        leaf_label = max(tree.ys, key=tree.ys.get) # Majority classs\n",
+    "        return leaf_label\n",
     "\n",
     "    # Prune each subtree recursively\n",
     "    for value, subtree in tree.subtrees.items():\n",
-    "        if type(subtree) != int:\n",
-    "            # Recursively prune the subtree\n",
-    "            tree.subtrees[value] = prune_tree(subtree, data)\n",
+    "        data_subtree = [(x, y) for x, y in data if x[tree.feature] == value]\n",
+    "        tree.subtrees[value] = prune_tree(subtree, data_subtree)\n",
     "\n",
-    "    # Test accuracy after pruning subtrees\n",
-    "    pruned_accuracy = test_data(tree, data)\n",
+    "    # Attempt to collapse this node\n",
+    "    leaf_label = max(tree.ys, key=tree.ys.get)\n",
+    "    collapsed_accuracy = sum(1 for x, y in data if y == leaf_label) / len(data)\n",
+    "    current_accuracy = test_data(tree, data)\n",
     "\n",
-    "    # If pruning does not decrease the error, try replacing the subtree with a leaf node\n",
-    "    if pruned_accuracy >= original_accuracy:\n",
-    "        # Create a leaf node based on the majority class in the current node\n",
-    "        leaf_label = max(tree.ys, key=tree.ys.get)\n",
-    "        pruned_tree = leaf_label\n",
-    "\n",
-    "        # Test the accuracy if we prune the entire current subtree\n",
-    "        temp_accuracy = test_data(pruned_tree, data)\n",
-    "\n",
-    "        # If accuracy does not decrease, replace the subtree with the leaf\n",
-    "        if temp_accuracy >= pruned_accuracy:\n",
-    "            return pruned_tree\n",
-    "\n",
-    "    # If pruning was not beneficial, return the original tree\n",
-    "    return tree"
+    "    # Only prune if collapsed accuracy improves by at least delta\n",
+    "    if collapsed_accuracy > current_accuracy:\n",
+    "        return leaf_label\n",
+    "    else:\n",
+    "        return tree\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import copy\n",
-    "import random\n",
-    "from helper import read_data\n",
-    "\n",
-    "def test_tree_accuracy(data):\n",
-    "    random.seed(1)\n",
-    "    print('=' * 58)\n",
-    "    trainlen = len(data['train'])\n",
-    "\n",
-    "    train_data = data['train']\n",
-    "    random.shuffle(train_data)\n",
-    "\n",
-    "    tree = build_tree(train_data[:int(trainlen * 0.8)])\n",
-    "    print(\n",
-    "        'Validate accuracy on tree without pruning ========>',\n",
-    "        test_data(tree, train_data[int(trainlen * 0.8):]))\n",
-    "    Ptree = prune_tree(\n",
-    "        copy.deepcopy(tree), train_data[int(trainlen * 0.8):])\n",
-    "    print(\n",
-    "        'Validate accuracy on tree with pruning ===========>',\n",
-    "        test_data(Ptree, train_data[int(trainlen * 0.8):]))\n",
-    "    print(\n",
-    "        'Test accuracy on tree without pruning ============>',\n",
-    "        test_data(tree, data['test']))\n",
-    "    print(\n",
-    "        'Test accuracy on tree with pruning ===============>',\n",
-    "        test_data(Ptree, data['test']))\n",
-    "    print('Tree size without pruning ========================> %6d' % (\n",
-    "        tree.size))\n",
-    "    print('Tree size with pruning ===========================> %6d' % (\n",
-    "        Ptree.size))\n",
-    "    print('Tree depth without pruning =======================> %6d' % (\n",
-    "        tree.depth))\n",
-    "    print('Tree depth with pruning ==========================> %6d' % (\n",
-    "        Ptree.depth))\n",
-    "    print('=' * 58)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -476,13 +441,13 @@
      "text": [
       "==========================================================\n",
       "Validate accuracy on tree without pruning ========> 0.8881\n",
-      "Validate accuracy on tree with pruning ===========> 0.6895\n",
+      "Validate accuracy on tree with pruning ===========> 0.917\n",
       "Test accuracy on tree without pruning ============> 0.8757\n",
-      "Test accuracy on tree with pruning ===============> 0.6908\n",
+      "Test accuracy on tree with pruning ===============> 0.8757\n",
       "Tree size without pruning ========================>    288\n",
-      "Tree size with pruning ===========================>      4\n",
+      "Tree size with pruning ===========================>    198\n",
       "Tree depth without pruning =======================>      7\n",
-      "Tree depth with pruning ==========================>      2\n",
+      "Tree depth with pruning ==========================>      7\n",
       "==========================================================\n"
      ]
     }
@@ -492,18 +457,11 @@
     "\n",
     "test_tree_accuracy(data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "data_science",
    "language": "python",
    "name": "python3"
   },
@@ -517,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
